# arc

./: .gitignore  Cargo.toml  LICENSE  README.md  summarize.py  zinc-bench.py
arc/: Cargo.toml
arc/src/: analyze.rs  codec.rs  lib.rs  model.rs  solver.rs
arc/src/assert/: action.rs  audit.rs  cache.rs  field.rs  mod.rs  queue.rs  signal.rs  solver.rs
arc/src/coerce/: action.rs  mod.rs  probe.rs  revert.rs  signal.rs  solver.rs
bitset/: Cargo.toml
bitset/src/: bit.rs  flat.rs  flat_raw.rs  lib.rs  like.rs  meta.rs  meta_raw.rs  roar.rs
puzzles/chain/: Cargo.toml  README.md  kernel-bench.csv  zinc-bench.csv  zinc-uarch.ps1
puzzles/chain/src/: lib.rs
puzzles/chain/src/method/binary/: audit.rs  mod.rs  model.rs
puzzles/chain/zinc/: data.dzn  model-chuffed.fzn  model-cp-sat.fzn  model-gecode.fzn  model.mzn  run.ps1
puzzles/color/: Cargo.toml
puzzles/color/src/: lib.rs  utility.rs
puzzles/color/src/method/binary/: model.rs
puzzles/latin/: Cargo.toml  README.md  kernel-bench.csv  zinc-bench.csv  zinc-uarch.ps1
puzzles/latin/src/method/binary/: audit.rs  mod.rs  model.rs
puzzles/latin/zinc/: model-gecode.fzn  model-in.mzn  model.mzn
