[package]
name = "latin"
version = "0.1.0"
edition = "2024"

[dependencies]
arc = { workspace = true }
bitset = { workspace = true }
fastdiv = "0.1.0"
rustc-hash = "2.1.2"
paste = { version = "1.0.15" }
csv = "1.4.0"

[dev-dependencies]
criterion = "0.8.2"
paste = "1.0.15"

[[bin]]
name = "latin-ratio"
path = "bin/ratio.rs"

[[bin]]
name = "latin-bench"
path = "bin/bench.rs"

[[bin]]
name = "latin-uarch"
path = "bin/uarch.rs"
